# ConsMLP

./: .cursorrules  .gitignore  AGENTS.md  AGENTS_GUIDE.md  CMakeLists.txt  ConsMLP_Partition_Method_Analysis.md  GITHUB_GUIDE.md  README.md  project_introduction.md
include/coarsening/: Coarsener.h
include/partitioning/: MultilevelPartitioner.h  PartitionConstraints.h
include/refinement/: Refiner.h
other_tools/: run_patoh_smoke_test.sh
other_tools/PaToH/examples/: tiny_test.u
scripts/: run_small_cases.sh  small_case.list
scripts/results/: final_summary.csv  recursive_summary.csv  summary.csv
src/: multilevel_partition.cpp  multilevel_partition.cpp.backup
src/coarsening/: Coarsener.cpp
src/examples/: hierarchy_example.cpp
src/partitioning/: MultilevelPartitioner.cpp  PartitionConstraints.cpp
src/refinement/: Refiner.cpp
src/utils/: HgrParser.cpp
